[package]
name = "near-marketplace"
version = "0.1.0"
authors = ["Lakshya <lakshyashishir1@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
near-sdk-sim = "4.0.0"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"